// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Usage adds styles by order of definition when called: flex, block, inline 1`] = `
<style
  data-dash="dash"
>
  
  .dash-imkh3o{display:flex;display:block;display:inline;}
</style>
`;

exports[`Usage adds styles by order of definition when called: flex, block, inline 2`] = `
<style
  data-dash="dash"
>
  
  .dash-imkh3o{display:flex;display:block;display:inline;}
</style>
`;

exports[`Usage allows multiple arguments in styles() 1`] = `"dash-1hsqp50"`;

exports[`Usage allows multiple arguments in styles() 2`] = `"dash-jk0pkr"`;

exports[`Usage allows unitless object values: 200x200 1`] = `
<style
  data-dash="dash"
>
  
  .dash-cl5oj8{width:200px;height:200px;}
</style>
`;

exports[`Usage returns single class name 1`] = `"dash-k008qs"`;

exports[`Usage returns single class name 2`] = `"dash-imkh3o"`;

exports[`Usage returns single class name 3`] = `"dash-1bvyhaf"`;

exports[`Usage supports internally nested styles w/ functions: dash-jk0pkr 1`] = `
<style
  data-dash="dash"
>
  
  .dash-1hsqp50{color:blue;}
</style>
`;

exports[`Usage supports internally nested styles w/ functions: dash-jk0pkr 2`] = `
<style
  data-dash="dash"
>
  
  .dash-1hsqp50 .dash-jk0pkr{color:purple;}
</style>
`;

exports[`Usage throws error for extract methods 1`] = `"style.extract is not a function"`;

exports[`Usage throws error for extract methods 2`] = `"style.extractTags is not a function"`;
